[workspace]
members = ["tracing-orchestra", "macros", "development"]
resolver = "2"
[workspace.package]
authors = ["megumsih <megumish@megumi.sh>"]
categories = ["tracing", "logging", "async", "metrics"]
description = "Give me more instruments!"
documentation = "https://github.com/megumish/tracing-orchestra"
edition = "2021"
exclude = []
homepage = "https://github.com/megumish/tracing-orchestra"
include = []
keywords = ["tracing", "logging", "async", "metrics"]
license = "MIT"
publish = false
readme = "./README.md"
repository = "https://github.com/megumish/tracing-orchestra.git"
rust-version = "1.72"
version = "0.2.0"

[workspace.dependencies]
tracing-orchestra-macros = "0.2.0"
tracing-orchestra = { path = "tracing-orchestra" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.dependencies.'tracing-orchestra-development']
package = "tracing-orchestra"
path = "tracing-orchestra"

[workspace.dependencies.'tracing-orchestra-macros-development']
package = "tracing-orchestra-macros"
path = "macros"
