[package]
name = "development"
authors = { workspace = true }
categories = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
exclude = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[[example]]
name = "simple"
path = "simple.rs"

[[example]]
name = "pass-directly"
path = "pass-directly.rs"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# refer to local crates for development
tracing-orchestra-development = { workspace = true }
tracing-orchestra-macros-development = { workspace = true }
