[package]
name = "examples"
authors = { workspace = true }
categories = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
exclude = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[[example]]
name = "simple"
path = "simple.rs"

[dependencies]
tracing-orchestra = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
