[package]
name = "tracing-orchestra"
authors = { workspace = true }
categories = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
exclude = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
publish = true
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
development = ["tracing-orchestra-macros-development"]

[dependencies]
tracing-orchestra-macros = { workspace = true }
tracing = { workspace = true }
# refer to local path package for development
tracing-orchestra-macros-development = { package = "tracing-orchestra-macros", path = "../macros", optional = true }
